Fixdistorted controls in google map

--- a/mobility-track-nodejs/public/css/styles.css
+++ b/mobility-track-nodejs/public/css/styles.css
@@ -10,3 +10,7 @@
 	width:100%;
 	height:500px;
 }
+
+#googleMap img{
+	max-width: none !important;
+}
